--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,1 +1,11 @@
-<h1>Angular 1.x ES2015, Webpack Sandpit</h1>
+<md-toolbar>
+    <h1>Angular 1.x ES2015, Webpack Sandpit</h1>
+
+</md-toolbar>
+<md-content>
+    <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
+        <md-nav-item md-nav-click="goto('page1')" name="page1">Page One</md-nav-item>
+        <md-nav-item md-nav-click="goto('page2')" name="page2">Page Two</md-nav-item>
+        <md-nav-item md-nav-click="goto('page3')" name="page3">Page Three</md-nav-item>
+    </md-nav-bar>
+</md-content>
