--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,7 @@
     <base href="/">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 </head>
-<body>
-<div>
-    <ui-view></ui-view>
-</div>
+<body ng-cloak>
+    <div ui-view></div>
 </body>
 </html>
