--- a/src/header/header.html
+++ b/src/header/header.html
@@ -1,5 +1,5 @@
 <header layout="row">
-    <img ng-src="{{headerCtrl.logoUrl}}" alt="Encompass Corporation">
+    <ss-logo></ss-logo>
     <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
         <md-nav-item md-nav-click="goto('page1')" name="dashboard">Dashboard</md-nav-item>
         <md-nav-item md-nav-click="goto('page2')" name="portfolio">Portfolio</md-nav-item>
